# schrodinger

./: .gitmodules  CMakeLists.txt  pyproject.toml  readme.md  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  clear_cache.yml  schrodinger2d.yml  strands.yml  upload_wheels.yml
src/: Domain.h  Schrodinger2D.cpp  Schrodinger2D.h  domain.h  schrodinger.h  schrodinger2d.cpp  schrodinger2d.h
src/python/: __init__.py  schrodinger.cpp  setup.py  strands.cpp
src/schrodinger/: eigenfunction.cpp  eigenpairs.h  eigenpairs_dense.cpp  eigenpairs_sparse.cpp  instantiate.h  schrodinger.cpp
src/schrodinger2d/: eigenfunction.cpp  eigenpairs.h  eigenpairs_dense.cpp  eigenpairs_sparse.cpp  instantiate.h  schrodinger2d.cpp
src/util/: geometry.h  per_direction.h  polymorphic_value.h  rectangular_pencil.h  rightKernel.h  right_kernel.cpp  right_kernel.h  right_kernel_sparse.cpp  slepc.h  tensor_indexer.h
test/: Simple.cpp  check_eigenvalues.h  disc.cpp  harmonic.cpp  henon_heiles.cpp  ixaru.cpp  main.cpp  profile_henon_heiles.cpp  quartic.cpp  schrodinger.h  zero.cpp
test/python/: test.py  test_docs.py
