
[metadata]
name = strands
description = "Strands - Standing waves approximations for the n-dimensional Schrödinger problem (with n = 2)."
long_description = file: readme.md
long_description_content_type = text/markdown
author = Toon Baeyens
author_email = toon.baeyens@ugent.be
license = MIT
platforms = any
url = https://github.com/twist-numerical/strands
project_urls =
    Source  = https://github.com/twist-numerical/strands
keywords = schrodinger equation, eigenvalues, numerical methods
classifiers =

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.6
install_requires =
    numpy
